Revert "Refactoring requests, responses (#827)"
This reverts commit d14f618886c68caef9a13a085d716dab62ae2be6.